[gd_scene load_steps=10 format=3 uid="uid://c6bys7qmg47vu"]

[ext_resource type="Script" path="res://scripts/LevelGenerator.gd" id="1_othul"]
[ext_resource type="PackedScene" uid="uid://b7appskn31h0j" path="res://rooms/startingroom.tscn" id="2_nw6cv"]
[ext_resource type="PackedScene" uid="uid://c2rmnsw733owe" path="res://rooms/room_1.tscn" id="2_o7ecf"]
[ext_resource type="PackedScene" uid="uid://brd0e0prilo1u" path="res://rooms/treasure_room.tscn" id="3_lb4fm"]
[ext_resource type="PackedScene" uid="uid://bea7dxoxtljv2" path="res://rooms/boss_room.tscn" id="4_2dtee"]
[ext_resource type="PackedScene" uid="uid://bqxapeut8i7oj" path="res://rooms/room_2.tscn" id="4_8h30b"]
[ext_resource type="PackedScene" uid="uid://p7da4albimpp" path="res://rooms/treasure_room_2.tscn" id="5_uvwmp"]
[ext_resource type="PackedScene" uid="uid://le4yoodme8uq" path="res://rooms/boss_room_2.tscn" id="7_k4jcp"]
[ext_resource type="Script" path="res://Camera2D.gd" id="9_rni7c"]

[node name="LevelGenerator" type="Node2D"]
script = ExtResource("1_othul")
start_room = ExtResource("2_nw6cv")
normal_rooms = Array[PackedScene]([ExtResource("2_o7ecf"), ExtResource("4_8h30b")])
treasure_rooms = Array[PackedScene]([ExtResource("3_lb4fm"), ExtResource("5_uvwmp")])
boss_rooms = Array[PackedScene]([ExtResource("4_2dtee"), ExtResource("7_k4jcp")])

[node name="Rooms" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 1036.0
offset_bottom = 137.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "NUMBER OF ROOMS: "

[node name="plusBtn" type="Button" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 64.0
offset_right = 96.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 30
text = "+"

[node name="minusBtn" type="Button" parent="CanvasLayer"]
offset_left = 192.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 30
text = "-"

[node name="genBtn" type="Button" parent="CanvasLayer"]
offset_top = 160.0
offset_right = 331.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 30
text = "GENERATE NEW LEVEL"

[node name="CameraDrag" type="Camera2D" parent="." groups=["camera"]]
position = Vector2(5120, 2880)
zoom = Vector2(0.1, 0.1)
script = ExtResource("9_rni7c")

[connection signal="pressed" from="CanvasLayer/plusBtn" to="." method="_on_plus_one_pressed"]
[connection signal="pressed" from="CanvasLayer/minusBtn" to="." method="_on_minus_one_pressed"]
[connection signal="pressed" from="CanvasLayer/genBtn" to="." method="_on_generate_new_level_pressed"]
